AP-18615: Apply Error Handling Concept to Loaders
AP-18615 (Apply Error Handling Concept to Loaders)